<resources>
    <string name="app_name">CountryDetail</string>
    <string name="languages">Languages</string>
    <string name="search_country">Search Country</string>
    <string name="filter">Filter</string>
    <string name="explore">Explore</string>
    <string name="population">Population:</string>
    <string name="region">Region:</string>
    <string name="capital">Capital:</string>
    <string name="motto">Motto:</string>
    <string name="official_language">Official language:</string>
    <string name="ethnic_group">Ethnic group:</string>
    <string name="religion">Religion:</string>
    <string name="government">Government:</string>
    <string name="timezone">Timezone:</string>
    <string name="date_format">Date format:</string>
    <string name="dialing_code">Dialing code:</string>
    <string name="driver_s_side">Driver\'s side:</string>
    <string name="en" translatable="false">EN</string>
</resources>