<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_big">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/toolText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/explore"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/drawable_padding"
                    android:layout_height="@dimen/drawable_padding"
                    android:src="@drawable/ic_circle"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txt"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/imageButton"
                    android:padding="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextView"
            android:layout_marginTop="@dimen/margin_mid"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/search_country"
            android:inputType="textAutoComplete"
            android:textAlignment="center"
            android:padding="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mid"
            android:text="@string/en"
            android:padding="@dimen/margin_small"
            android:background="@drawable/text_background"
            android:drawablePadding="@dimen/drawable_padding"
            android:drawableStart="@drawable/world"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mid"
            android:text="@string/filter"
            android:padding="@dimen/margin_small"
            android:background="@drawable/text_background"
            android:drawablePadding="@dimen/drawable_padding"
            android:drawableStart="@drawable/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            tools:listitem="@layout/rv_layout"
            tools:itemCount="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lang"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


